--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /testfile
 /Lab
-/2ndrefactor/trainingImgs
-/2ndrefactor/testtingImgs
+/program/trainingImgs
+/program/testtingImgs
 /2ndrefactor/docs
 /2ndrefactor/TEST
